--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "recipe-mangment-app",
+  "name": "recipe-managment-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
